Added SQL check details

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -296,6 +296,30 @@ IgnoreThesePorts                   = @('1311', '1556', '2381', '3389', '4750', '
 
 
 ; _________________________________________________________________________________________________
+; SQL
+[sql01-skip]
+; No Settings
+
+[sql02-skip]
+; No Settings
+
+[sql03-skip]
+; No Settings
+
+[sql04-skip]
+; No Settings
+
+[sql05-skip]
+; No Settings
+
+[sql06-skip]
+MinimumFreeSpace                   = '2048'
+
+[sql07-skip]
+; No Settings
+
+
+; _________________________________________________________________________________________________
 ; SYSTEM
 [sys01]
 ; No Settings
