--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -294,6 +294,9 @@ IgnoreThesePorts                   = @('1311', '1556', '2381', '3389', '4750', '
 [sec17]
 ; No Settings
 
+[sec18]
+; No Settings
+
 
 ; _________________________________________________________________________________________________
 ; SQL
