Update for COL- to TOL- conversion

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -56,55 +56,6 @@ GroupMembers                       = @('')
 
 
 ; _________________________________________________________________________________________________
-; COMPLIANCE
-[com01]
-MaximumDATAgeAllowed               =   '7'
-ProductName                        =   'McAfee VirusScan Enterprise'
-ProductVersion                     =   '8.8'
-
-[com02]
-ProductNames                       = @('Microsoft Monitoring Agent', 'System Center Operations Manager', 'Operations Manager Agent')
-
-[com03]
-; No Settings
-
-[com04]
-ProductName                        =   'Symantec NetBackup'
-RequiredServerRoles                = @('Exchange', 'SQL')
-
-[com05]
-MaximumLastPatchAgeAllowed         =   '35'
-
-[com06]
-; No Settings
-
-[com07-skip]
-; No Settings
-
-[com08-skip]
-ListeningPort                      =   '4750'
-CustomerCode                       =   'ACME'
-LocalAccount                       =   'Administrator'
-
-[com09]
-MaximumDATAgeAllowed               =   '7'
-ProductName                        =   'Trend Micro OfficeScan Client'
-ProductVersion                     =   '10.6'
-DATPathLocation                    =   'C:\Program Files (x86)\Trend Micro\OfficeScan Client\'
-
-[com10-skip]
-ProductName                        = @('')
-AllMustExist                       =   'True'
-
-[com11-skip]
-SerivcesToCheck                    = @('')
-AllMustExist                       =   'True'
-
-[com12]
-IgnoreTheseRoles                   = @('Ink and Handwriting Services', 'Remote Differential Compression')
-
-
-; _________________________________________________________________________________________________
 ; DRIVES
 [drv01]
 MinimumSystemDriveSize             =   '49'
@@ -417,6 +368,55 @@ Variable03                         =   ''
 Value01                            =   'ReportOnly'
 Value02                            =   'C:\ProgramData'
 Value03                            =   ''
+
+
+; _________________________________________________________________________________________________
+; TOOLING
+[tol01]
+MaximumDATAgeAllowed               =   '7'
+ProductName                        =   'McAfee VirusScan Enterprise'
+ProductVersion                     =   '8.8'
+
+[tol02]
+ProductNames                       = @('Microsoft Monitoring Agent', 'System Center Operations Manager', 'Operations Manager Agent')
+
+[tol03]
+; No Settings
+
+[tol04]
+ProductName                        =   'Symantec NetBackup'
+RequiredServerRoles                = @('Exchange', 'SQL')
+
+[tol05]
+MaximumLastPatchAgeAllowed         =   '35'
+
+[tol06]
+; No Settings
+
+[tol07-skip]
+; No Settings
+
+[tol08-skip]
+ListeningPort                      =   '4750'
+CustomerCode                       =   'ACME'
+LocalAccount                       =   'Administrator'
+
+[tol09]
+MaximumDATAgeAllowed               =   '7'
+ProductName                        =   'Trend Micro OfficeScan Client'
+ProductVersion                     =   '10.6'
+DATPathLocation                    =   'C:\Program Files (x86)\Trend Micro\OfficeScan Client\'
+
+[tol10-skip]
+ProductName                        = @('')
+AllMustExist                       =   'True'
+
+[tol11-skip]
+SerivcesToCheck                    = @('')
+AllMustExist                       =   'True'
+
+[tol12]
+IgnoreTheseRoles                   = @('Ink and Handwriting Services', 'Remote Differential Compression')
 
 
 ; _________________________________________________________________________________________________
