Change TOL-12 default state to disabled

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -415,7 +415,7 @@ AllMustExist                       =   'True'
 SerivcesToCheck                    = @('')
 AllMustExist                       =   'True'
 
-[tol12]
+[tol12-skip]
 IgnoreTheseRoles                   = @('Ink and Handwriting Services', 'Remote Differential Compression')
 
 
