Update for new check SEC19

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -248,6 +248,8 @@ IgnoreThesePorts                   = @('1311', '1556', '2381', '3389', '4750', '
 [sec18]
 ; No Settings
 
+[sec19]
+; No Settings
 
 ; _________________________________________________________________________________________________
 ; SQL
