Update for SEC-20

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -251,6 +251,9 @@ IgnoreThesePorts                   = @('1311', '1556', '2381', '3389', '4750', '
 [sec19]
 ; No Settings
 
+[sec20]
+MinimumHashLevel                   =   '3'
+
 ; _________________________________________________________________________________________________
 ; SQL
 [sql01-skip]
