Settings for new check SYS24

--- a/settings/default-settings.ini
+++ b/settings/default-settings.ini
@@ -374,6 +374,10 @@ Value01                            =   'ReportOnly'
 Value02                            =   'C:\ProgramData'
 Value03                            =   ''
 
+[sys24-skip]
+FileName                           =   'should-not-exist.txt'
+FailOnFound                        =   'True'
+
 
 ; _________________________________________________________________________________________________
 ; TOOLING
